@@ -208,7 +208,8 @@ class Installer
             ConfigHelper::update('PACKETERY_DEFAULT_PACKAGING_WEIGHT', 0) &&
             ConfigHelper::update(ConfigHelper::KEY_LAST_FEATURE_CHECK, (string) time()) &&
             ConfigHelper::update(ConfigHelper::KEY_LAST_VERSION, $this->module->version) &&
-            ConfigHelper::update(ConfigHelper::KEY_LAST_VERSION_URL, '')
+            ConfigHelper::update(ConfigHelper::KEY_LAST_VERSION_URL, '') &&
+            ConfigHelper::update(ConfigHelper::KEY_USE_PS_CURRENCY_CONVERSION, 0)
         );
     }
 
