@@ -66,15 +66,18 @@ class OrderExporter
                 ) . ' - ' . $order->id
             );
         }
-        if ($orderCurrency->iso_code !== $targetCurrency) {
+        if (
+            $orderCurrency->iso_code !== $targetCurrency &&
+            (bool)ConfigHelper::get(ConfigHelper::KEY_USE_PS_CURRENCY_CONVERSION) === true
+        ) {
             $paymentRepository = $this->module->diContainer->get(PaymentRepository::class);
             $total = $paymentRepository->getRateTotal($orderCurrency->iso_code, $targetCurrency, $total);
             if ($total === null) {
                 throw new ExportException(
                     $this->module->l(
-                        'Can\'t find order currency rate between order and pickup point, order',
+                        'Unable to find the exchange rate in the PrestaShop currency settings for the destination country of the order',
                         'orderexporter'
-                    ) . ' - ' . $order->id
+                    ) . ': ' . $order->id
                 );
             }
         }
