@@ -12,6 +12,7 @@ class ConfigHelper
     const KEY_LAST_FEATURE_CHECK = 'PACKETERY_LAST_FEATURE_CHECK';
     const KEY_LAST_VERSION_URL = 'PACKETERY_LAST_VERSION_URL';
     const KEY_LAST_VERSION = 'PACKETERY_LAST_VERSION';
+    const KEY_USE_PS_CURRENCY_CONVERSION = 'PACKETERY_USE_PS_CURRENCY_CONVERSION';
 
     const BEHAVIOR_ALL = 'all'; // default
     const BEHAVIOR_SEPARATE = 'separate';
